--- a/pom.xml
+++ b/pom.xml
@@ -27,36 +27,10 @@
         <graphiql-spring-boot-starter.version>${graphql-spring-boot-starter.version}</graphiql-spring-boot-starter.version>
         <graphql-spring-boot-starter.version>5.0.2</graphql-spring-boot-starter.version>
         <graphql-java-tools.version>5.2.4</graphql-java-tools.version>
+        <spring-web.version>5.2.8.RELEASE</spring-web.version>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
-            <version>${spring-boot.version}</version>
-        </dependency>
 
-        <!--graphQL dependency-->
-        <dependency>
-            <groupId>com.graphql-java</groupId>
-            <artifactId>graphql-spring-boot-starter</artifactId>
-            <version>${graphql-spring-boot-starter.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.graphql-java</groupId>
-            <artifactId>graphql-java-tools</artifactId>
-            <version>${graphql-java-tools.version}</version>
-        </dependency>
-        <!--this dependency is optional one
-        used to generate UI for graphql schema-->
-        <!--follow below link to open graphql UI-->
-        <!--http://localhost:8080/graphiql-->
-        <dependency>
-            <groupId>com.graphql-java</groupId>
-            <artifactId>graphiql-spring-boot-starter</artifactId>
-            <version>${graphiql-spring-boot-starter.version}</version>
-        </dependency>
-    </dependencies>
 
     <build>
         <plugins>
